# scotland-income-tax-reform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: next.config.js  package-lock.json  package.json  vercel.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/public/data/: reform_results.json
dashboard/src/: basePath.js
dashboard/src/components/: ChartLogo.jsx  MethodologyTab.jsx  PolicyEngineHeader.jsx  ReformTab.jsx  ScottishBaselineTab.jsx
dashboard/src/lib/: dataHelpers.js  formatters.js
data/: reform_results.json
src/scotland_income_tax_reform/: __init__.py  analysis.py  cli.py  pipeline.py
tests/: test_analysis.py
