[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scotland-income-tax-reform"
version = "0.1.0"
description = "Data pipeline and dashboard for Reform UK Scotland's income tax proposal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
simulation = [
  "policyengine-uk>=2.75.2",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
scotland-it-reform-build = "scotland_income_tax_reform.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scotland_income_tax_reform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
